# fraud-detection

./: .gitignore  README.md  config.py  dashboard.py  features.py  frauddetection.ipynb  generate_sample_data.py  main.py  models.py  pipeline.py  pyproject.toml  render.yaml  requirements-pipeline.txt  requirements.txt  utils.py
.streamlit/: config.toml
dashboard/: app.py
dashboard/components/: metric_cards.py
dashboard/pages/: financial.py  monitor.py  overview.py  performance.py  predictions.py  risk_intel.py
output/: evaluation_metrics.json  model_metrics.json  pipeline_summary.json  val_predictions.csv
scripts/: generate_demo_data.py
src/fraud_detection/: config.py  main.py  pipeline.py
src/fraud_detection/explainability/: __init__.py  explainer.py
src/fraud_detection/features/: amount.py  anomaly.py  categorical.py  graph.py  pipeline.py  temporal.py
src/fraud_detection/models/: __init__.py  ensemble.py  evaluate.py  selection.py  train.py  trained_pipeline.py  tune.py
src/fraud_detection/monitoring/: __init__.py  drift.py  governance.py  quant.py
src/fraud_detection/serving/: api.py  demo_scorer.py
src/fraud_detection/utils/: __init__.py  checkpoint.py  encode.py  io.py  logging.py  memory.py  metrics.py
tests/: conftest.py  test_features.py  test_metrics.py  test_models.py
