[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fraud-detection"
version = "1.0.0"
description = "Fraud Risk Intelligence — ML pipeline, API, and dashboard"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "imbalanced-learn>=0.11.0",
    "networkx>=3.1",
    "shap>=0.44.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
    "psutil>=5.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fraud_detection*"]
